<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_register">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="48dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="64dp"
            android:textColor="@color/login_title"/>


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_account_et"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            app:theme="@style/EditTheme"
            android:hint="@string/register_account"
            android:inputType="text"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_password_et"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:inputType="textPassword"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/main"
            android:layout_marginTop="20dp"
            android:hint="@string/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/EditTheme"/>
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_email_et"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="20dp"
            android:hint="@string/register_email"
            android:inputType="text"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/EditTheme"/>


        <Button
            android:layout_alignParentBottom="true"
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="32dp"
            android:text="@string/register_button"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="#F1453D"/>




    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="18dp">

        <TextView
            android:id="@+id/register_ToLogin"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_ToLogin"
            android:textSize="20dp"
            android:layout_toLeftOf="@+id/divide"
            android:textColor="@color/login_button"/>
        <View

            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            android:id="@+id/divide"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/login_view"/>
        <TextView
            android:id="@+id/register_ToTourist"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tourist"
            android:textSize="20dp"
            android:textColor="@color/login_edittext_text"/>

    </RelativeLayout>

</RelativeLayout>