<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:background="@mipmap/bg_slide"
    android:layout_height="match_parent">
<LinearLayout
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content"
        android:layout_weight="1">

    </FrameLayout>
    <!--底部导航栏上面的阴影部分 -->
    <View
        android:layout_width="match_parent"
        android:background="@drawable/shadow"
        android:layout_height="2dp"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/find_Layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/find_image"
                    android:src="@mipmap/ic_stories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/find_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Stories"
                    android:textColor="#82858b" />


            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/attention_Layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/attention_image"
                    android:src="@mipmap/ic_menu_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/attention_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Essay"
                    android:textColor="#82858b" />

            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/friend_Layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/friend_image"
                    android:src="@mipmap/ic_menu_allfriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/friend_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/friend"
                    android:textColor="#82858b" />
            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/mine_Layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/mine_image"
                    android:src="@mipmap/ic_menu_friendslist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/mine_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mine"
                    android:textColor="#82858b" />

            </LinearLayout>

        </RelativeLayout>

     </LinearLayout>

   </LinearLayout>
    <fragment
        android:id="@+id/main_left"
        android:name="com.android.simplereader.ui.fragment.LeftMenuFragment"
        android:layout_gravity="left"
        android:tag="LEFTMENU"
        android:layout_width="220dp"
        android:layout_height="match_parent"/>
</android.support.v4.widget.DrawerLayout>